Fix alignment at top of main grid.

--- a/lesson2/styles/medium.css
+++ b/lesson2/styles/medium.css
@@ -3,6 +3,8 @@
   .grid-container-main {
     grid-template-columns: auto auto;
     grid-gap: 5px 10px;
+    align-content: flex-start;
+    grid-gap: 5px 10px;
   }
 
   .row2 {
